--- a/Xo/Views/Shared/_Layout.cshtml
+++ b/Xo/Views/Shared/_Layout.cshtml
@@ -21,9 +21,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li><a href="@Url.Action("Index", "Home", routeValues: new { area = "" })">Home</a></li>
+                    <li><a href="@Url.Action("About", "Home", routeValues: new { area = "" })">About</a></li>
+                    <li><a href="@Url.Action("Contact", "Home", routeValues: new { area = "" })">Contact</a></li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
