--- a/Xo/Areas/Accounts/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Xo/Areas/Accounts/Views/Account/ExternalLoginConfirmation.cshtml
@@ -19,7 +19,7 @@
         logging in.
     </p>
     <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+        @Html.BootstrapLabelFor(m => m.Email)
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
             @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
