--- a/Xo/Areas/Accounts/Views/Account/ResetPassword.cshtml
+++ b/Xo/Areas/Accounts/Views/Account/ResetPassword.cshtml
@@ -13,19 +13,19 @@
     @Html.ValidationSummary("", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.Code)
     <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+        @Html.BootstrapLabelFor(m => m.Email)
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+        @Html.BootstrapLabelFor(m => m.Password)
         <div class="col-md-10">
             @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
+        @Html.BootstrapLabelFor(m => m.ConfirmPassword)
         <div class="col-md-10">
             @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
         </div>
