--- a/Xo/Areas/Accounts/Views/Manage/AddPhoneNumber.cshtml
+++ b/Xo/Areas/Accounts/Views/Manage/AddPhoneNumber.cshtml
@@ -12,7 +12,7 @@
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
-        @Html.LabelFor(m => m.Number, new { @class = "col-md-2 control-label" })
+        @Html.BootstrapLabelFor(m => m.Number)
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Number, new { @class = "form-control" })
         </div>
