--- a/Xo/Areas/Accounts/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/Xo/Areas/Accounts/Views/Manage/VerifyPhoneNumber.cshtml
@@ -14,7 +14,7 @@
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
-        @Html.LabelFor(m => m.Code, new { @class = "col-md-2 control-label" })
+        @Html.BootstrapLabelFor(m => m.Code)
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Code, new { @class = "form-control" })
         </div>
