Removed the Xo.Infrastructure.Alerts namespace from the views web.config

--- a/Xo/Views/Shared/_Alerts.cshtml
+++ b/Xo/Views/Shared/_Alerts.cshtml
@@ -1,4 +1,5 @@
-﻿@if (TempData.GetAlerts().Any())
+﻿@using Xo.Infrastructure.Alerts
+@if (TempData.GetAlerts().Any())
 {
     foreach (var alert in TempData.GetAlerts())
     {
