--- a/Xo/Areas/Accounts/Views/Manage/AddPhoneNumber.cshtml
+++ b/Xo/Areas/Accounts/Views/Manage/AddPhoneNumber.cshtml
@@ -14,7 +14,7 @@
     <div class="form-group">
         @Html.BootstrapLabelFor(m => m.Number)
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Number, new { @class = "form-control" })
+            @Html.EditorFor(m => m.Number)
         </div>
     </div>
     <div class="form-group">
