--- a/Xo/Areas/Accounts/Views/Manage/ChangePassword.cshtml
+++ b/Xo/Areas/Accounts/Views/Manage/ChangePassword.cshtml
@@ -14,19 +14,19 @@
     <div class="form-group">
         @Html.BootstrapLabelFor(m => m.OldPassword)
         <div class="col-md-10">
-            @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
+            @Html.EditorFor(m => m.OldPassword)
         </div>
     </div>
     <div class="form-group">
         @Html.BootstrapLabelFor(m => m.NewPassword)
         <div class="col-md-10">
-            @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
+            @Html.EditorFor(m => m.NewPassword)
         </div>
     </div>
     <div class="form-group">
         @Html.BootstrapLabelFor(m => m.ConfirmPassword)
         <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+            @Html.EditorFor(m => m.ConfirmPassword)
         </div>
     </div>
     <div class="form-group">
