--- a/Xo/Areas/Accounts/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/Xo/Areas/Accounts/Views/Manage/VerifyPhoneNumber.cshtml
@@ -16,7 +16,7 @@
     <div class="form-group">
         @Html.BootstrapLabelFor(m => m.Code)
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Code, new { @class = "form-control" })
+            @Html.EditorFor(m => m.Code)
         </div>
     </div>
     <div class="form-group">
