Enabled MvcBuildViews in all modes except Debug
* Set the base intermediate output path outside of project path (see http://stackoverflow.com/a/2862996/1945957)
* Fixed _SetPasswordPartial, even though it is not used anywhere!?

--- a/Xo/Areas/Identity/Views/Account/_SetPasswordPartial.cshtml
+++ b/Xo/Areas/Identity/Views/Account/_SetPasswordPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model Xo.Areas.Identity.Models.ManageUserViewModel
+﻿@model Xo.Areas.Identity.Models.SetPasswordViewModel
 
 @using (Html.BeginForm("Manage", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
