Made Infrastructure an area

--- a/Xo/Views/Shared/_Alerts.cshtml
+++ b/Xo/Views/Shared/_Alerts.cshtml
@@ -1,4 +1,4 @@
-﻿@using Xo.Infrastructure.Alerts
+﻿@using Xo.Areas.Infrastructure.Alerts
 @if (TempData.GetAlerts().Any())
 {
     foreach (var alert in TempData.GetAlerts())
