Improved support for quickly generating controllers
* Added area, controller, and view code templates
* Added and updated model metadata filters
* Added and improved shared views and editor templates

--- a/Xo/Views/Shared/EditorTemplates/EmailAddress.cshtml
+++ b/Xo/Views/Shared/EditorTemplates/EmailAddress.cshtml
@@ -1,8 +1,1 @@
-﻿@{
-    var htmlAttributes = new RouteValueDictionary(new { @class = "email-address form-control", type = "email" });
-    if (ViewData.ModelMetadata.IsRequired)
-    {
-        htmlAttributes.Add("aria-required", true);
-    }
-}
-@Html.TextBox("", ViewData.TemplateInfo.FormattedModelValue, htmlAttributes)
+﻿@Html.TextBox("", ViewData.TemplateInfo.FormattedModelValue, htmlAttributes: new { @class = "email-address-editor form-control", type = "email" })
