--- a/Xo/Views/Shared/EditorTemplates/Password.cshtml
+++ b/Xo/Views/Shared/EditorTemplates/Password.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    var htmlAttributes = new RouteValueDictionary(new { @class = "password form-control" });
+    var htmlAttributes = new RouteValueDictionary(new { @class = "password-editor form-control" });
     if (ViewData.ModelMetadata.IsRequired)
     {
         htmlAttributes.Add("aria-required", true);
