--- a/Xo/Views/Shared/EditorTemplates/PhoneNumber.cshtml
+++ b/Xo/Views/Shared/EditorTemplates/PhoneNumber.cshtml
@@ -1,1 +1,1 @@
-﻿@Html.TextBox("", ViewData.TemplateInfo.FormattedModelValue, new { @class = "phone-number form-control", type = "tel" })
+﻿@Html.TextBox("", ViewData.TemplateInfo.FormattedModelValue, new { @class = "phone-number-editor form-control", type = "tel" })
