--- a/Xo/Views/Shared/EditorTemplates/String.cshtml
+++ b/Xo/Views/Shared/EditorTemplates/String.cshtml
@@ -1,8 +1,2 @@
-﻿@{
-    var htmlAttributes = new RouteValueDictionary(new { @class = "string form-control" });
-    if (ViewData.ModelMetadata.IsRequired)
-    {
-        htmlAttributes.Add("aria-required", true);
-    }
-}
-@Html.TextBox("", ViewData.TemplateInfo.FormattedModelValue, htmlAttributes)
+﻿@model string
+@Html.TextBox("", Model ?? ViewData.TemplateInfo.FormattedModelValue, htmlAttributes: new { @class = "string-editor form-control" })
