--- a/Xo/Views/Shared/EditorTemplates/ReadOnly.cshtml
+++ b/Xo/Views/Shared/EditorTemplates/ReadOnly.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="form-control-static">
+﻿<div class="form-control-static read-only-editor">
     @if (Model == null)
     {
         <text>--</text>
